<?xml version="1.0"?>
<package>
  <name>pg_spinnaker_camera</name>
  <version>0.0.1</version>
  <description>Wrapper of the Pointgrey Spinnaker SDK.</description>

  <maintainer email="miquel.massot@uib.cat">Miquel Massot</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/pg_spinnaker_ros</url>

  <author email="miquel.massot@gmail.com">Miquel Massot</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>


  <run_depend>camera_info_manager</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
